# landscape-charm

./: Makefile  actions.yaml  charmcraft.yaml  metadata.yaml  pyproject.toml
bundle-examples/: internal-haproxy.bundle.yaml
src/: charm.py  haproxy.cfg.j2  haproxy.py
terraform/: README.md
terraform/charm/: README.md
terraform/product/modules/landscape-scalable/: README.md
tests/unit/: conftest.py  helpers.py  test_charm.py  test_haproxy.py  test_settings_files.py
