[tool.poetry]
name = "landscape-charm"
description = "Juju charm for deploying and managing Landscape Server"
authors = ["Canonical"]
package-mode = false

[tool.poetry.dependencies]
ops = ">=1.4.0"
jinja2 = "*"
python = "^3.10"
charmlibs-interfaces-tls-certificates = "1.0"

[tool.poetry.group.dev.dependencies]
black = "*"
charmcraftcache = "*"
cosl = ">=1.0.0"
coverage = "*"
flake8 = "*"
isort = "*"
ops = {extras = ["testing"], version = "~=2.19"}
pydantic = "<2"
pytest = "*"
ruff = "*"

[tool.poetry.group.integration.dependencies]
jubilant = "~=1.0"
requests = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py310"]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py310"
# Skip vendored dependencies
extend-exclude = ["lib"]

[tool.ruff.lint]
select = [
  # pycodestyle errors
  "E",
  # pycodestyle warnings
  "W",
  # Pyflakes
  "F",
  # isort
  "I",
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
order-by-type = false
case-sensitive = false

[tool.pytest.ini_options]
filterwarnings = [
    "once:.*Harness is deprecated.*:PendingDeprecationWarning"
]
pythonpath = [".", "lib", "src"]
testpaths = ["tests"]
